fixed the title and overlap problem of the photo

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,22 +69,18 @@ body {
   background: #0ff;
   border: none;
   color: black;
-  text-shadow: 0 0 20px rgb(15, 15, 15);
-  font-size: 1.25rem;
+  text-shadow: 0 0 4px #b8b9b9;
+  font-size: 1.4rem;
+  font-weight: 1000;
   font-family: "Roboto", sans-serif;
   padding: 10px 12px;
   border-radius: 20px;
-  cursor: url("magnifying.svg"), pointer;
+  cursor: url("magnifying.png") 0 0, pointer;
   font-weight: 400;
   box-shadow: 0 2px 10px #0ff;
 }
 
-.highlighted {
-  width: 200px;
-  height: 200px;
-  z-index: 100;
-  transform: scale(1.2);
-}
+
 
 .floating-photo {
   position: fixed;
@@ -104,15 +100,21 @@ body {
 
 .floating-photo:hover {
   transform: scale(1.1);
-  z-index: 999;
+  z-index: 20;
 }
-
 .floating-photo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
   pointer-events: none;
+}
+
+.highlighted {
+  width: 220px; !important;
+  height: 220px; !important;
+  z-index: 5000; !important;
+  transform: none; !important;
 }
 
 .photo-title {
@@ -122,11 +124,27 @@ body {
   background: rgba(0, 0, 0, 0.55);
   color: white;
   text-align: center;
-  font-size: 0.9rem;
+  /* font-size: 0.75rem; */
   padding: 6px 4px;
-  opacity: 0;
-  /* transform: translateY(100%); */
-  transition: opacity 0.25s ease;
+  /* opacity: 0; */
+  /* transition: opacity 0.25s ease; */
+  /* white-space: normal; 
+  word-break: break-word; */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4));
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 20%,
+    black 80%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 20%,
+    black 80%,
+    transparent
+  );
 }
 
 .floating-photo:hover .photo-title {
